# mpak

./: .dockerignore  .env.example  .gitignore  .prettierignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  PRODUCT.md  PUBLISHING.md  README.md  RELEASING.md  SECURITY.md  biome.json  eslint.config.js  package.json  pnpm-lock.yaml  tsconfig.base.json  turbo.json
.github/: CODEOWNERS
.github/workflows/: ci.yml  cli-publish.yml  deploy-docs.yml  scanner-ci.yml  scanner-image-refresh.yml  scanner-publish.yml  schemas-publish.yml  sdk-python-ci.yml  sdk-python-publish.yml  sdk-typescript-ci.yml  sdk-typescript-publish.yml
apps/docs/: Dockerfile  README.md  astro.config.mjs  package-lock.json  package.json
apps/scanner/: .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  pyproject.toml
apps/scanner/docs/: CONTRIBUTING.md  CONTROLS.md  LEVELS.md
apps/scanner/src/mpak_scanner/: __init__.py  cli.py  job.py  models.py  scanner.py  schemas.py
apps/scanner/src/mpak_scanner/controls/: __init__.py  base.py
apps/scanner/src/mpak_scanner/controls/artifact_integrity/: __init__.py  ai01_manifest.py  ai02_content_hashes.py  ai03_bundle_signature.py  ai04_reproducible_build.py  ai05_bundle_completeness.py
apps/scanner/src/mpak_scanner/controls/capability_declaration/: __init__.py  cd01_tools.py  cd02_permission_scope.py  cd03_tool_description_safety.py  cd04_credential_scope.py  cd05_token_lifetime.py
apps/scanner/src/mpak_scanner/controls/code_quality/: __init__.py  cq01_secrets.py  cq02_malicious.py  cq03_static_analysis.py  cq04_input_validation.py  cq05_safe_execution.py  cq06_behavioral_analysis.py
apps/scanner/src/mpak_scanner/controls/provenance/: __init__.py  pr01_source_repository.py  pr02_author_identity.py  pr03_build_attestation.py  pr04_commit_linkage.py  pr05_repository_health.py
apps/scanner/src/mpak_scanner/controls/supply_chain/: __init__.py  sc01_sbom.py  sc02_vuln_scan.py  sc03_dependency_pinning.py  sc04_lockfile_integrity.py  sc05_trusted_sources.py
apps/scanner/src/mpak_scanner/rules/: __init__.py  malicious.yaml  secrets.yaml  unsafe-exec.yaml
apps/scanner/src/mpak_scanner/utils/: __init__.py  name_analysis.py
apps/scanner/tests/: __init__.py  test_e2e_bundles.py  test_job.py  test_scanner.py
apps/scanner/tests/fixtures/: README.md
apps/scanner/tests/fixtures/clean-l1-bundle/: manifest.json
apps/scanner/tests/fixtures/clean-l1-bundle/src/: server.py
apps/scanner/tests/fixtures/has-secrets-bundle/: manifest.json
apps/scanner/tests/fixtures/has-secrets-bundle/src/: server.py
apps/scanner/tests/fixtures/has-vulns-bundle/: manifest.json  requirements.txt
apps/scanner/tests/fixtures/has-vulns-bundle/src/: server.py
apps/scanner/tests/fixtures/invalid-manifest-bundle/: manifest.json
apps/scanner/tests/fixtures/invalid-manifest-bundle/src/: server.py
apps/scanner/tests/fixtures/malicious-test-bundle/: manifest.json
apps/scanner/tests/fixtures/malicious-test-bundle/src/malicious_server/: __init__.py  server.py  setup_hook.py
apps/scanner/tests/fixtures/missing-tools-bundle/: manifest.json
apps/scanner/tests/fixtures/missing-tools-bundle/src/: server.py
apps/scanner/tests/fixtures/node-server-bundle/: manifest.json
apps/scanner/tests/fixtures/node-server-bundle/src/: server.js
apps/scanner/tests/fixtures/unsafe-node-bundle/: manifest.json
apps/scanner/tests/fixtures/unsafe-node-bundle/src/: server.js
scripts/: dev.sh  release.sh  setup.sh  test.sh
(+200 files in other folders)
